--- a/client/Makefile
+++ b/client/Makefile
@@ -416,9 +416,9 @@ flu-mob-release-and-gen: ## flu-mob-release-and-gen
 	# all the screenshots!!
 
 
+flu-mob-release-ios-gen: ## flu-mob-release-ios-gen
 
-
-
+	# TODO: This needs to be done.
 
 
 
