--- a/server/k8s/http-ingress.yaml
+++ b/server/k8s/http-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: maintemplate
+  name: main
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/use-regex: "true"
@@ -11,6 +11,6 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: flutter
+          serviceName: main-flutter
           servicePort: 80
         path: /*
