--- a/server/k8s/main-server-service.yaml
+++ b/server/k8s/main-server-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: grpc-web
+  name: main-server
   annotations:
     cloud.google.com/app-protocols: '{"http2":"HTTP2"}'
 spec:
   selector:
-    app: grpc-web
+    app: main-server
   type: NodePort
   ports:
   - name: http2
