--- a/server/k8s/http-ingress.yaml
+++ b/server/k8s/http-ingress.yaml
@@ -5,8 +5,13 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/use-regex: "true"
+    cert-manager.io/issuer: letsencrypt-prod
 spec:
   rules:
+  tls:
+    - hosts:
+      - main.ci.getcouragenow.org
+      secretName: main-ci-tls 
   - host: main.getcouragenow.org
     http:
       paths:
